--- a/wp-content/themes/redi-dilavi/assets/scss2/_global.scss
+++ b/wp-content/themes/redi-dilavi/assets/scss2/_global.scss
@@ -2026,3 +2026,33 @@ a.viewall {
 
 /*-------contact form 7 style ----*/
 
+.page-numbers{
+	list-style: none;
+	margin-bottom: 0;
+	margin-left: 0px;
+	padding-left: 0;
+	li{		
+		float: left;
+		margin-right: 5px;
+		span{
+			display: block;
+			&.current{
+				background-color: #f9c979;
+				padding: 2px 11px;
+				border-radius: 5px;
+				color: #ffffff;
+			}			
+		}
+		a{
+			display: block;
+			background-color:#4A2715;
+			padding: 2px 10px;
+			border-radius: 5px;
+			color: #ffffff;
+			@include p-web(transition , all 0.5s);
+			&:hover{
+				background-color:#f9c979;
+			}
+		}
+	}
+}
